# braggedgemodeling

./: .gitignore  .grype.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  README.md  RELEASING.md  Structure_factor_calculation_with_Debye_Waller_factor_Ni.xlsx  TDS_and_Absorption_scattering_calculations_Ni.xlsx  api.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  tutorial.html  update-cg1d-installation  usage.html
.github/: dependabot.yml
.github/workflows/: CI.yml  publish.yml
JOSS-paper/: paper.bib  paper.md  paper.tex
_modules/: index.html
_sources/: api.rst.txt  installation.rst.txt  tutorial.rst.txt  usage.rst.txt
bem/: DebyeTemp.py  DebyeWaller.py  __init__.py  _version.py  atomic_scattering.py  calc.py  constants.py  diffraction.py  matter.py  peak_profile.py  xscalc.py  xtaloriprobmodel.py
bem/texture/: mtex.py  polfig2VPSC.m  texture2R.py
bem/texture/preparation/: vdrive_handler.py  vdrive_to_mtex.py
braggedgemodeling/: DebyeTemp.py  __init__.py  atomic_scattering.py  calc.py  constants.py  diffraction.py  matter.py  peak_profile.py  vogel.py  xscalc.py  xtaloriprobmodel.py
braggedgemodeling/texture/: __init__.py  mtex.py  odf2VPSC.m  texture2R.py
braggedgemodeling/texture/preparation/: vdrive_handler.py  vdrive_to_mtex.py
conda.recipe/: meta.yaml
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  tutorial.rst  tutorial_Al.py  tutorial_Ni.py
docs/excel/: Bragg_edge_elastic_coherent_scattering_calculation.xlsx
notebooks/: README.md  testmatlab-mtex-2.ipynb  tutorial.ipynb
scripts/: vdrive_handler_to_mtex.py
tests/: NaCl.cif  Test_xs_NaCl.py  bem.conf  conftest.py  fccAl.py  fccNi-coh-el-xs.npy  fccNi.py  test_atomic_scattering.py  test_calc.py  test_diffraction.py  test_extinction.py  test_fractional_occ.py  test_fractional_occ2.py  test_profile_convolution.py  test_spacegroup.py  test_texture.py  test_texture_Fe.py  test_xs.py  test_xs_Al.py  test_xs_Al_float.py  test_xs_NaCl.py  test_xs_Ni.py
tests/data/: 78901-79020_PF.xlsx  VULCAN.rpf  ducu.txt  my_ducu.txt  vdrive_filename.txt
tests/expected/: NaCl-total-xs.npy  NiFeCrMo-xs.npy  bccFe-texture-xs.npy  fccAl-total-xs.npy
tests/texture/: test_workflow.py
tests/texture/preparation/: vdrive_handler_test.py  vdrive_to_mtex_test.py
