[project]
name = "braggedgemodeling"
description = "Bragg Edge modeling"
dynamic = ["version"]
requires-python = ">=3.12"
license = { text = "BSD" }
keywords = ["instrument", "neutron", "imaging", "Bragg Edge"]
readme = "README.md"
authors = [
  { name = "ORNL neutron imaging team", email = "neutronimaging@ornl.gov" },
]
maintainers = [
  { name = "ORNL neutron imaging team", email = "neutronimaging@ornl.gov" },
]
dependencies = [
  "pyyaml",
  "numpy",
  "scipy",
  "matplotlib",
  "diffpy.structure",
  "periodictable",
  "pandas",
]

# The texture subpackage additionally requires an external MATLAB + mtex + VPSC
# toolchain (not installable from PyPI/conda). See docs; tracked in issue #40.
[project.optional-dependencies]
texture = []
# used by the Read the Docs pip build (`.[docs]`)
docs = ["sphinx", "sphinx-rtd-theme"]

[project.urls]
homepage = "https://github.com/ornlneutronimaging/braggedgemodeling"
repository = "https://github.com/ornlneutronimaging/braggedgemodeling"
issues = "https://github.com/ornlneutronimaging/braggedgemodeling/issues"

[build-system]
requires = ["setuptools>=61", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.1.3"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
# conda package versions cannot contain a local "+..." segment, and the
# pixi-build conda build temporarily edits pyproject.toml (the sync-version
# task) which dirties the tree. So use a date-based dev version with no local
# segment, and keep the dirty version equal to the clean one so the temporary
# edit does not change the computed version (mirrors python_project_template).
distance = "{next_version}.dev{committer_date:%Y%m%d%H%M%S}"
dirty = "{version}"
distance-dirty = "{next_version}.dev{committer_date:%Y%m%d%H%M%S}"

[tool.setuptools.packages.find]
where = ["."]
include = ["braggedgemodeling*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
# ship the MATLAB helpers used by the texture backend
"braggedgemodeling.texture" = ["*.m"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# texture tests need MATLAB/mtex, which is unavailable in CI (see issue #40)
markers = ["matlab: tests that require an external MATLAB + mtex install"]

# ===================
# ==== Pixi ==========
# ===================

[tool.pixi.workspace]
channels = ["conda-forge", "https://prefix.dev/pixi-build-backends"]
platforms = ["linux-64", "osx-arm64"]
preview = [
  "pixi-build",
] # enables `pixi publish` (conda build); still a preview feature

[tool.pixi.pypi-dependencies]
braggedgemodeling = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.12"
pyyaml = "*"
numpy = "*"
scipy = "*"
matplotlib-base = "*"
pandas = "*"
periodictable = "*"
"diffpy.structure" = "*"

# Pixi-build (preview) configuration: builds the conda package from this
# manifest via `pixi publish`, replacing the old conda.recipe/meta.yaml +
# conda mambabuild. Modeled on neutrons/python_project_template.
[tool.pixi.package]
name = "braggedgemodeling"
version = "0.0.0"          # placeholder, overwritten at build time by the sync-version task

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "*" }

[tool.pixi.package.host-dependencies]
setuptools = ">=61"
versioningit = "*"

[tool.pixi.package.run-dependencies]
python = ">=3.12"
pyyaml = "*"
numpy = "*"
scipy = "*"
matplotlib-base = "*"
pandas = "*"
periodictable = "*"
"diffpy.structure" = "*"

[tool.pixi.tasks]
test = { cmd = "pytest --ignore=tests/texture --ignore=tests/test_texture.py", description = "Run the MATLAB-free test suite (only tests/texture needs MATLAB/mtex — see #40; test_texture.py's fixture assertion is disabled upstream and is covered by test_xs_Ni)" }

[tool.pixi.feature.test.dependencies]
pytest = ">=7"
pytest-cov = "*"

[tool.pixi.feature.package.dependencies]
python-build = "*"    # `build` task (python -m build) for the PyPI sdist + wheel
versioningit = "*"    # compute the version for the sync-version task
anaconda-client = "*" # `anaconda upload` of the built .conda in CI

[tool.pixi.feature.package.pypi-dependencies]
toml-cli = "*" # `toml set` in the sync-version task

# build tasks live in the package feature so `pixi run -e package <task>`
# resolves them (the package env sets no-default-feature, so it does not see
# the default [tool.pixi.tasks])
[tool.pixi.feature.package.tasks]
build = { cmd = "python -m build", description = "Build the PyPI sdist + wheel" }
# conda build via the pixi-build preview feature (`pixi publish`), replacing the
# old conda.recipe + conda mambabuild. pixi-build needs a STATIC version in
# [tool.pixi.package], so sync-version writes the versioningit version into
# pyproject.toml, wrapped by backup/reset so the working tree is left unchanged.
build-conda = { description = "Build the conda package (pixi-build → ./local-channel)", depends-on = [
  "backup-toml",
  "sync-version",
  "conda-build-command",
  "reset-toml",
] }
conda-build-command = { cmd = "pixi publish --target-channel ./local-channel", description = "pixi-build the conda package into ./local-channel" }
sync-version = { cmd = 'version=$(python -m versioningit); toml set tool.pixi.package.version "$version" --toml-path pyproject.toml', description = "Write the versioningit version into [tool.pixi.package]" }
backup-toml = { cmd = "cp pyproject.toml pyproject.toml.bak", description = "Back up pyproject.toml before the temporary version edit" }
reset-toml = { cmd = "cp pyproject.toml.bak pyproject.toml && rm pyproject.toml.bak", description = "Restore pyproject.toml after the build" }

[tool.pixi.feature.docs.dependencies]
sphinx = "*"
sphinx_rtd_theme = "*"

[tool.pixi.feature.docs.tasks]
build-docs = { cmd = "sphinx-build -b html docs docs/_build/html", description = "Build the HTML documentation" }

[tool.pixi.feature.lint.dependencies]
pre-commit = "*"

[tool.pixi.feature.lint.tasks]
pre-commit = { cmd = "pre-commit run --all-files --show-diff-on-failure", description = "Run all pre-commit hooks (ruff, hygiene hooks) across the repo" }

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.environments]
default = { features = ["test"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
# lint/pre-commit tooling isolated from the runtime/test envs (pre-commit
# manages each hook's own environment)
lint = { features = ["lint"], no-default-feature = true }
# package/publish tooling isolated from the runtime/test envs
package = { features = ["package"], no-default-feature = true }
py312 = { features = ["test", "py312"], solve-group = "py312" }
py313 = { features = ["test", "py313"], solve-group = "py313" }

[tool.ruff]
line-length = 120
# the py2-era notebooks under notebooks/ do not parse under ruff; keep them out
# of ruff-check and ruff-format (force-exclude makes the pre-commit hooks, which
# pass files explicitly, honor this exclusion)
extend-exclude = ["notebooks"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# This 2018-era scientific codebase idiomatically uses late/conditional imports
# (E402), single-letter physics variables such as `l` = wavelength (E741), and a
# couple of lambda assignments (E731). Accept these rather than churn the code.
ignore = ["E402", "E741", "E731"]

[tool.ruff.lint.per-file-ignores]
# tests compute intermediate cross-sections to exercise code paths without
# always asserting on them
"tests/**" = ["F841"]

[tool.ruff.format]
quote-style = "double"

[tool.codespell]
# "te" = Tellurium (chemical symbol, appears in DebyeTemp element tables);
# "interm" = intermediate (abbreviation used as a variable name in texture tests)
ignore-words-list = "te,interm"
